[gd_scene load_steps=6 format=3 uid="uid://rbm60r732qhu"]

[ext_resource type="Script" path="res://editor.gd" id="1_tkhl1"]
[ext_resource type="Script" path="res://junk_selector.gd" id="2_0dsf8"]
[ext_resource type="Theme" uid="uid://b05rwfiq5wd5o" path="res://theme.tres" id="2_fp8by"]
[ext_resource type="PackedScene" uid="uid://40b620mv4mcu" path="res://all_junk.tscn" id="3_pw7fq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a87qc"]
size = Vector2(1952, 1295)

[node name="editor" type="Node2D"]
script = ExtResource("1_tkhl1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -78.0
offset_top = -62.0
offset_right = 1454.0
offset_bottom = 783.0
mouse_filter = 1
color = Color(1, 0.729412, 0.611765, 1)

[node name="junk_selector" type="ScrollContainer" parent="."]
offset_left = 873.0
offset_top = 1.0
offset_right = 1283.0
offset_bottom = 720.0
theme = ExtResource("2_fp8by")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("2_0dsf8")

[node name="all_junk" parent="junk_selector" instance=ExtResource("3_pw7fq")]
visible = false
position = Vector2(-1049, -1)

[node name="text_rect_template" type="TextureRect" parent="junk_selector"]
layout_mode = 2
stretch_mode = 3

[node name="BoxContainer" type="VBoxContainer" parent="junk_selector"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="junk_container" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7
monitorable = false
priority = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(966, 637.5)
shape = SubResource("RectangleShape2D_a87qc")

[node name="money_label" type="Label" parent="."]
offset_left = 220.0
offset_top = 653.0
offset_right = 332.0
offset_bottom = 679.0
scale = Vector2(2.37, 2.37)
text = "Money: $0"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
offset_left = 7.0
offset_top = 5.0
offset_right = 47.0
offset_bottom = 44.0
color = Color(1, 0.729412, 0.611765, 1)
edit_alpha = false

[node name="ColorPickerButton2" type="ColorPickerButton" parent="."]
offset_left = 66.0
offset_top = 6.0
offset_right = 106.0
offset_bottom = 45.0
color = Color(1, 0.729412, 0.611765, 1)
edit_alpha = false

[node name="Button" type="Button" parent="."]
offset_left = 7.0
offset_top = 657.0
offset_right = 204.0
offset_bottom = 714.0
text = "SELL"

[node name="Button2" type="Button" parent="."]
offset_left = 659.0
offset_top = 654.0
offset_right = 856.0
offset_bottom = 711.0
text = "KEEP"

[node name="screenshot_rect" type="ReferenceRect" parent="."]
offset_left = 1.0
offset_top = 53.0
offset_right = 870.0
offset_bottom = 653.0

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="color_changed" from="ColorPickerButton2" to="." method="_on_color_picker_button_2_color_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
